--- a/index.css
+++ b/index.css
@@ -68,3 +68,50 @@ button {
     border-radius: 8px;
     width: 120px;
 }
+
+.two {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+.box {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+.text3 {
+    text-align: center;
+    color: black;
+    font-size: 44px;
+    font-weight: bold;
+}
+.boxbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.three {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+    background-color: #E5E7EB;
+}
+.right {
+    padding-left: 650px;
+    align-self: center;
+    font-weight: 900;
+    font-size: 16px;
+}
+
+.text4 {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+}
