--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Roboto', sans-serif;
     display:flex;
     flex-direction: column;
     margin:0;
@@ -19,9 +20,9 @@ body {
 .logo {
     font-size: 24px;
     color: #F9FAF8;
+    font-weight: 900;
 }
 .links {
-    font-size: 17px;
     display:flex;
     gap: 15px;
 }
